# cohort-based-2D-time-series

./: .gitignore  LICENSE  README.md  config.py  main.py  model.py  preprocessing.py  pyproject.toml
notebooks/: kaggel_customer_data_modelling.ipynb
