[tool.poetry]
name = "cohort-2d-ts"
version = "0.1.0"
description = "venv for cohort 2d time series modeling"
authors = ["Yonathan Guttel <yguttel@lightricks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
pandas = "^2.2.1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
pmdarima = "^2.0.4"
threadpoolctl = "^3.4.0"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.1.post1"
scipy = "^1.13.0"
xgboost = "^2.0.3"
prophet = "^1.1.5"
jinja2 = "^3.1.3"
tabulate = "^0.9.0"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
